# cms

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
data/agentic-dev/: about.json  comparison.json  hero.json  problems.json  projects.json  services.json  solutions.json  stack.json
data/shared/: ecosystem.json
data/synapticore-io/: hero.json  modes.json  stats.json
data/synapticore-studio/: capabilities.json  case-studies.json  hero.json  timeline.json
schema/: tables.sql
src/cms/: db.py  main.py
src/cms/commands/: export.py  init.py  query.py  seed.py
