[project]
name = "cms"
version = "0.1.0"
description = "DuckDB-based content management for synapticore web properties"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
cms = "cms.main:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
